# handsOnDE_yt_api

./: .dockerignore  .env.example  .gitignore  Dockerfile.dashboard  Dockerfile.etl  README.md  dashboard.py  db_config.json  db_config.json.example  docker-compose.yml  initial_exploration.ipynb  main.py  pyproject.toml  requirements.txt
exploration/: initial_exploration.ipynb  test.ipynb
responses/raw/: _videos_response_page_1_2025_07_31_08_02_39.json  _videos_response_page_2_2025_07_31_08_02_39.json
src/: extract.py  extraction_config.json  load.py  transform.py  transform_schema.json
