[project]
name = "handsonde-yt-api"
version = "0.1.0"
description = "1/x of the personal projects to get hands on pipe-lining ETL. Nothing new"
authors = [
    {name = "GentleClash",email = "ayushbajpai016@gmail.com"}
]
license = {text = "GNU GENERAL PUBLIC LICENSE"}
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "requests (>=2.32.4,<3.0.0)",
    "sqlalchemy (>=2.0.42,<3.0.0)",
    "pandas (>=2.3.1,<3.0.0)",
    "pyarrow (>=21.0.0,<22.0.0)",
    "psycopg[binary] (>=3.2.9,<4.0.0)",
    "streamlit (>=1.48.1,<2.0.0)",
    "plotly (>=6.3.0,<7.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
